--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html"><span>WebStudio</span></a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a class="page-logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
     <main>
       <!--Hero-->
       <section>
@@ -35,7 +43,7 @@
       <!--Features-->
       <section>
         <h2>Fetures</h2>
-        <ul>
+        <ul class="features list">
           <li>
             <h3>Увага до деталей</h3>
             <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
@@ -58,7 +66,7 @@
       <!--Work-->
       <section>
         <h2>Чим ми займаємося</h2>
-        <ul>
+        <ul class="work list">
           <li><img src="./images/work/box1.png" alt="бази даних" width="370" height="294" /></li>
           <li><img src="./images/work/box2.png" alt="контакти" /></li>
           <li><img src="./images/work/box3.png" alt="фінансовий аналіз" /></li>
@@ -68,7 +76,7 @@
       <!--Team-->
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="team list">
           <li>
             <img src="./images/team/teamcard1.jpg" alt="Ігор Демьяненко" width="270" height="260" />
             <h3>Ігор Демьяненко</h3>
@@ -97,7 +105,7 @@
     <footer>
       <a href="./index.html"><span>WebStudio</span></a>
       <address>
-        <ul>
+        <ul class="footer list">
           <li>
             <a
               href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
