--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
     <main>
       <!--Hero-->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
 
       <!--Features-->
-      <section>
-        <h2>Fetures</h2>
+      <section class="section">
+        <h2 class="section-title">Fetures</h2>
         <ul class="features list">
           <li>
             <h3>Увага до деталей</h3>
@@ -64,8 +64,8 @@
       </section>
 
       <!--Work-->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work list">
           <li><img src="./images/work/box1.png" alt="бази даних" width="370" height="294" /></li>
           <li><img src="./images/work/box2.png" alt="контакти" /></li>
@@ -74,8 +74,8 @@
       </section>
 
       <!--Team-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul class="team list">
           <li>
             <img src="./images/team/teamcard1.jpg" alt="Ігор Демьяненко" width="270" height="260" />
@@ -102,7 +102,7 @@
     </main>
 
     <!--Footer-->
-    <footer>
+    <footer class="footer">
       <a href="./index.html"><span>WebStudio</span></a>
       <address>
         <ul class="footer list">
