--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         <h2 class="section-title">Fetures</h2>
         <ul class="features list">
           <li>
-            <h3>Увага до деталей</h3>
+            <h3 class="title">Увага до деталей</h3>
             <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h3 class="title">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів.</p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3 class="title">Планування</h3>
             <p>Консультація в значній мірі з широким активом.</p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h3 class="title">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
