--- a/index.html
+++ b/index.html
@@ -46,19 +46,23 @@
         <ul class="features list">
           <li>
             <h3 class="title">Увага до деталей</h3>
-            <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
+            <p class="text">
+              Ідейні міркування, а також початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
             <h3 class="title">Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів.</p>
+            <p class="text">Завдання організації, особливо рамки і місце навчання кадрів.</p>
           </li>
           <li>
             <h3 class="title">Планування</h3>
-            <p>Консультація в значній мірі з широким активом.</p>
+            <p class="text">Консультація в значній мірі з широким активом.</p>
           </li>
           <li>
             <h3 class="title">Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
