--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
       <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work list">
-          <li><img src="./images/work/box1.png" alt="бази даних" width="370" height="294" /></li>
-          <li><img src="./images/work/box2.png" alt="контакти" /></li>
-          <li><img src="./images/work/box3.png" alt="фінансовий аналіз" /></li>
+          <li class="link">
+            <img src="./images/work/box1.png" alt="бази даних" width="370" height="294" />
+          </li>
+          <li class="link"><img src="./images/work/box2.png" alt="контакти" /></li>
+          <li class="link">
+            <img src="./images/work/box3.png" alt="фінансовий аналіз" class="link" />
+          </li>
         </ul>
       </section>
 
