add team section style

--- a/index.html
+++ b/index.html
@@ -86,24 +86,48 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="team list">
           <li>
-            <img src="./images/team/teamcard1.jpg" alt="Ігор Демьяненко" width="270" height="260" />
-            <h3>Ігор Демьяненко</h3>
-            <p>Product Designer</p>
+            <img
+              src="./images/team/teamcard1.jpg"
+              alt="Ігор Демьяненко"
+              width="270"
+              height="260"
+              class="photo"
+            />
+            <h3 class="title">Ігор Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
-            <img src="./images/team/teamcard2.jpg" alt="Ольга Репіна" width="270" height="260" />
-            <h3>Ольга Репіна</h3>
-            <p>Frontend Developer</p>
+            <img
+              src="./images/team/teamcard2.jpg"
+              alt="Ольга Репіна"
+              width="270"
+              height="260"
+              class="photo"
+            />
+            <h3 class="title">Ольга Репіна</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team/teamcard3.jpg" alt="Микола Тарасов" width="270" height="260" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/team/teamcard3.jpg"
+              alt="Микола Тарасов"
+              width="270"
+              height="260"
+              class="photo"
+            />
+            <h3 class="title">Микола Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/team/teamcard4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <img
+              src="./images/team/teamcard4.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+              height="260"
+              class="photo"
+            />
+            <h3 class="title>Михайло Єрмаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
