--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work list">
           <li class="link">
-            <img src="./images/work/box1.png" alt="бази даних" width="370" height="294" />
+            <img src="./images/work/box1.png" alt="бази даних" width="370" height="294" class="pic"/>
           </li>
-          <li class="link"><img src="./images/work/box2.png" alt="контакти" /></li>
+          <li class="link"><img src="./images/work/box2.png" alt="контакти" class="pic"/></li>
           <li class="link">
-            <img src="./images/work/box3.png" alt="фінансовий аналіз" class="link" />
+            <img src="./images/work/box3.png" alt="фінансовий аналіз" class="pic"/>
           </li>
         </ul>
       </section>
@@ -135,17 +135,17 @@
 
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html"><span>WebStudio</span></a>
+      <a class="logo list" href="./index.html"><span class="web-logo">Web</span>Studio</a>
       <address>
         <ul class="footer list">
           <li>
             <a
               href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-              >м. Київ, пр-т Лесі Українки, 26</a
+               class="adress-link">м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
