add portfolio web

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,59 +34,130 @@
     </header>
 
     <main>
+      <!--секція з кнопками-->
+      <section class="portfolio">
+        <h1 class="portfolio-title">Портфоліо</h1>
+        <ul class="portfolio list">
+          <li>
+            <button class="portfolio-btn" type="button"><span class="btn-text">Всі</span></button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">
+              <span class="btn-text">Веб-сайти</span>
+            </button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">
+              <span class="btn-text">Додатки</span>
+            </button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">
+              <span class="btn-text">Дизайн</span>
+            </button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">
+              <span class="btn-text">Маркетинг</span>
+            </button>
+          </li>
+        </ul>
+      </section>
+
+      <!--секція з картками-->
       <section class="main">
         <h2 class="section-title">Напрямки роботи</h2>
         <ul class="maim list">
           <li>
-            <img src="./images-portfolio/img.png" alt="Технокряк" class="photo" />
+            <img src="./images-portfolio/img.jpg" alt="Технокряк" class="photo" />
             <h3 class="title">Технокряк</h3>
             <p class="work-text">Веб-сайт</p>
           </li>
           <li>
             <img
-              src="./images-portfolio/img (1).png"
+              src="./images-portfolio/img (1).jpg"
               alt="Постер New Orlean vs Golden Star"
+              width="370"
+              height="295"
               class="photo"
             />
             <h3 class="title">Постер New Orlean vs Golden Star</h3>
             <p class="work-text">Дизайн</p>
           </li>
           <li>
-            <img src="./images-portfolio/img (2).png" alt="Ресторан Seafood" class="photo" />
+            <img
+              src="./images-portfolio/img (2).jpg"
+              alt="Ресторан Seafood"
+              width="370"
+              height="295"
+              class="photo"
+            />
             <h3 class="title">Ресторан Seafood</h3>
-            <p class="team-text">Приложение</p>
+            <p class="work-text">Приложение</p>
           </li>
           <li>
-            <img src="./images-portfolio/img (3).png" alt="Проект Prime" class="photo" />
+            <img
+              src="./images-portfolio/img (3).jpg"
+              alt="Проект Prime"
+              width="370"
+              height="295"
+              class="photo"
+            />
             <h3 class="title">Проект Prime</h3>
             <p class="work-text">Маркетинг</p>
           </li>
           <li>
-            <img src="./images-portfolio/img (4).png" alt="Проект Boxes" class="photo" />
+            <img
+              src="./images-portfolio/img (4).jpg"
+              alt="Проект Boxes"
+              width="370"
+              height="295"
+              class="photo"
+            />
             <h3 class="title">Проект Boxes</h3>
             <p class="work-text">Приложение</p>
           </li>
           <li>
             <img
-              src="./images-portfolio/img (5).png"
+              src="./images-portfolio/img (5).jpg"
               alt="Inspiration has no Borders"
+              width="370"
+              height="295"
               class="photo"
             />
             <h3 class="title">Inspiration has no Borders</h3>
             <p class="work-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="./images-portfolio/img (6).png" alt="Издание Limited Edition" class="photo" />
+            <img
+              src="./images-portfolio/img (7).jpg"
+              alt="Издание Limited Edition"
+              width="370"
+              height="295"
+              class="photo"
+            />
             <h3 class="title">Издание Limited Edition</h3>
             <p class="work-text">Дизайн</p>
           </li>
           <li>
-            <img src="./images-portfolio/img (7).png" alt="Проект LAB" class="photo" />
+            <img
+              src="./images-portfolio/img (8).jpg"
+              alt="Проект LAB"
+              width="370"
+              height="295"
+              class="photo"
+            />
             <h3 class="title">Проект LAB</h3>
             <p class="work-text">Маркетинг</p>
           </li>
           <li>
-            <img src="./images-portfolio/img (8).png" alt="Growing Business" class="photo" />
+            <img
+              src="./images-portfolio/img (9).jpg"
+              alt="Growing Business"
+              width="370"
+              height="295"
+              class="photo"
+            />
             <h3 class="title">Growing Business</h3>
             <p class="work-text">Приложение</p>
           </li>
