--- a/index.html
+++ b/index.html
@@ -72,11 +72,17 @@
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work list">
           <li class="link">
-            <img src="./images/work/box1.png" alt="бази даних" width="370" height="294" class="pic"/>
+            <img
+              src="./images/work/box1.png"
+              alt="бази даних"
+              width="370"
+              height="294"
+              class="pic"
+            />
           </li>
-          <li class="link"><img src="./images/work/box2.png" alt="контакти" class="pic"/></li>
+          <li class="link"><img src="./images/work/box2.png" alt="контакти" class="pic" /></li>
           <li class="link">
-            <img src="./images/work/box3.png" alt="фінансовий аналіз" class="pic"/>
+            <img src="./images/work/box3.png" alt="фінансовий аналіз" class="pic" />
           </li>
         </ul>
       </section>
@@ -126,7 +132,7 @@
               height="260"
               class="photo"
             />
-            <h3 class="title>Михайло Єрмаков</h3>
+            <h3 class="title">Михайло Єрмаков</h3>
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
@@ -141,7 +147,8 @@
           <li>
             <a
               href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-               class="adress-link">м. Київ, пр-т Лесі Українки, 26</a
+              class="adress-link"
+              >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
