--- a/portfolio.html
+++ b/portfolio.html
@@ -67,96 +67,96 @@
       <!--секція з картками-->
       <section class="main">
         <h2 class="section-title">Напрямки роботи</h2>
-        <ul class="maim list">
-          <li>
+        <ul class="magic list">
+          <li class="link">
             <img src="./images-portfolio/img.jpg" alt="Технокряк" class="photo" />
             <h3 class="title">Технокряк</h3>
             <p class="work-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (1).jpg"
               alt="Постер New Orlean vs Golden Star"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Постер New Orlean vs Golden Star</h3>
             <p class="work-text">Дизайн</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (2).jpg"
               alt="Ресторан Seafood"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Ресторан Seafood</h3>
             <p class="work-text">Приложение</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (3).jpg"
               alt="Проект Prime"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Проект Prime</h3>
             <p class="work-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (4).jpg"
               alt="Проект Boxes"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Проект Boxes</h3>
             <p class="work-text">Приложение</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (5).jpg"
               alt="Inspiration has no Borders"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Inspiration has no Borders</h3>
             <p class="work-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (7).jpg"
               alt="Издание Limited Edition"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Издание Limited Edition</h3>
             <p class="work-text">Дизайн</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (8).jpg"
               alt="Проект LAB"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Проект LAB</h3>
             <p class="work-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="link">
             <img
               src="./images-portfolio/img (9).jpg"
               alt="Growing Business"
               width="370"
               height="295"
-              class="photo"
+              class="picture"
             />
             <h3 class="title">Growing Business</h3>
             <p class="work-text">Приложение</p>
