--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a class="page-logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./index.html" class="link current">Студія</a></li>
           <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
@@ -34,15 +34,15 @@
     </header>
 
     <main>
-      <!--Hero-->
-      <section class="hero">
+      <!--Herro-->
+      <section class="herro">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="btn" type="button">Замовити послугу</button>
       </section>
 
       <!--Features-->
       <section class="section">
-        <h2 class="section-title">Fetures</h2>
+        <h2 class="section-title visually-hidden">Fetures</h2>
         <ul class="features list">
           <li>
             <h3 class="title">Увага до деталей</h3>
