--- a/portfolio.html
+++ b/portfolio.html
@@ -36,37 +36,25 @@
     <main>
       <!--секція з кнопками-->
       <section class="portfolio">
-        <h1 class="portfolio-title">Портфоліо</h1>
+        <h1 class="portfolio-title visually-hidden">Портфоліо</h1>
         <ul class="portfolio list">
           <li>
-            <button class="portfolio-btn" type="button"><span class="btn-text">Всі</span></button>
+            <button class="portfolio-btn active" type="button">Всі</button>
           </li>
           <li>
-            <button class="portfolio-btn" type="button">
-              <span class="btn-text">Веб-сайти</span>
-            </button>
+            <button class="portfolio-btn active" type="button">Веб-сайти</button>
           </li>
           <li>
-            <button class="portfolio-btn" type="button">
-              <span class="btn-text">Додатки</span>
-            </button>
+            <button class="portfolio-btn active" type="button">Додатки</button>
+          </li>
+          <li> 
+            <button class="portfolio-btn active" type="button">Дизайн</button>
           </li>
           <li>
-            <button class="portfolio-btn" type="button">
-              <span class="btn-text">Дизайн</span>
-            </button>
-          </li>
-          <li>
-            <button class="portfolio-btn" type="button">
-              <span class="btn-text">Маркетинг</span>
-            </button>
+            <button class="portfolio-btn active" type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
 
-      <!--секція з картками-->
-      <section class="main">
-        <h2 class="section-title">Напрямки роботи</h2>
         <ul class="magic list">
           <li class="link">
             <img src="./images-portfolio/img.jpg" alt="Технокряк" class="photo" />
