--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <!--Herro-->
       <section class="herro">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="herro-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="btn" type="button">Замовити послугу</button>
       </section>
 
@@ -77,7 +77,6 @@
               alt="бази даних"
               width="370"
               height="294"
-              class="pic"
             />
           </li>
           <li class="link"><img src="./images/work/box2.png" alt="контакти" class="pic" /></li>
