--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,6 @@
     </header>
 
     <main>
-      <!--секція з кнопками-->
       <section class="portfolio">
         <h1 class="portfolio-title visually-hidden">Портфоліо</h1>
         <ul class="portfolio list">
@@ -69,7 +68,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Постер New Orlean vs Golden Star</h3>
+            <h3 class="list-title">Постер New Orlean vs Golden Star</h3>
             <p class="work-text">Дизайн</p>
           </li>
           <li class="link">
@@ -80,7 +79,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Ресторан Seafood</h3>
+            <h3 class="list-title">Ресторан Seafood</h3>
             <p class="work-text">Приложение</p>
           </li>
           <li class="link">
@@ -91,7 +90,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Проект Prime</h3>
+            <h3 class="list-title">Проект Prime</h3>
             <p class="work-text">Маркетинг</p>
           </li>
           <li class="link">
@@ -102,7 +101,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Проект Boxes</h3>
+            <h3 class="list-title">Проект Boxes</h3>
             <p class="work-text">Приложение</p>
           </li>
           <li class="link">
@@ -113,7 +112,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Inspiration has no Borders</h3>
+            <h3 class="list-title">Inspiration has no Borders</h3>
             <p class="work-text">Веб-сайт</p>
           </li>
           <li class="link">
@@ -124,7 +123,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Издание Limited Edition</h3>
+            <h3 class="list-title">Издание Limited Edition</h3>
             <p class="work-text">Дизайн</p>
           </li>
           <li class="link">
@@ -135,7 +134,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Проект LAB</h3>
+            <h3 class="list-title">Проект LAB</h3>
             <p class="work-text">Маркетинг</p>
           </li>
           <li class="link">
@@ -146,7 +145,7 @@
               height="295"
               class="picture"
             />
-            <h3 class="title">Growing Business</h3>
+            <h3 class="list-title">Growing Business</h3>
             <p class="work-text">Приложение</p>
           </li>
         </ul>
