--- a/portfolio.html
+++ b/portfolio.html
@@ -41,16 +41,16 @@
             <button class="portfolio-btn active" type="button">Всі</button>
           </li>
           <li>
-            <button class="portfolio-btn active" type="button">Веб-сайти</button>
+            <button class="portfolio-btn" type="button">Веб-сайти</button>
           </li>
           <li>
-            <button class="portfolio-btn active" type="button">Додатки</button>
+            <button class="portfolio-btn" type="button">Додатки</button>
           </li>
           <li> 
-            <button class="portfolio-btn active" type="button">Дизайн</button>
+            <button class="portfolio-btn" type="button">Дизайн</button>
           </li>
           <li>
-            <button class="portfolio-btn active" type="button">Маркетинг</button>
+            <button class="portfolio-btn" type="button">Маркетинг</button>
           </li>
         </ul>
 
